rename variable to have underscore

--- a/docs/assets/examples/seattle-weather/7.idoc.md
+++ b/docs/assets/examples/seattle-weather/7.idoc.md
@@ -6,8 +6,8 @@
   "$schema": "https://vega.github.io/schema/vega/v5.json",
   "signals": [
     {
-      "name": "seattle-weather",
-      "update": "data('seattle-weather')"
+      "name": "seattle_weather",
+      "update": "data('seattle_weather')"
     },
     {
       "name": "IncludeSun",
@@ -37,7 +37,7 @@
   ],
   "data": [
     {
-      "name": "seattle-weather",
+      "name": "seattle_weather",
       "url": "https://vega.github.io/editor/data/seattle-weather.csv",
       "format": {
         "type": "csv"
@@ -73,7 +73,7 @@ Data table:
 
 ```json tabulator
 {
-    "dataSignalName": "seattle-weather",
+    "dataSignalName": "seattle_weather",
     "options": {}
 }
 ```
@@ -85,7 +85,7 @@ The colors distinguish between different weather conditions such as sun, fog, dr
 ```json vega-lite
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {"name": "seattle-weather"},
+  "data": {"name": "seattle_weather"},
   "mark": "bar",
   "encoding": {
     "x": {
@@ -116,7 +116,7 @@ And here is a heatmap:
 ```json vega-lite
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": {"name": "seattle-weather"},
+  "data": {"name": "seattle_weather"},
   "title": "Daily Max Temperatures (C) in Seattle, WA",
   "config": {
       "view": {
