--- a/docs/assets/examples/seattle-weather/9.idoc.md
+++ b/docs/assets/examples/seattle-weather/9.idoc.md
@@ -6,8 +6,8 @@
   "$schema": "https://vega.github.io/schema/vega/v5.json",
   "signals": [
     {
-      "name": "seattle-weather",
-      "update": "data('seattle-weather')"
+      "name": "seattle_weather",
+      "update": "data('seattle_weather')"
     },
     {
       "name": "IncludeSun",
@@ -59,7 +59,7 @@
   ],
   "data": [
     {
-      "name": "seattle-weather",
+      "name": "seattle_weather",
       "url": "https://vega.github.io/editor/data/seattle-weather.csv",
       "format": {
         "type": "csv"
@@ -166,7 +166,7 @@ Data table:
 
 ```json tabulator
 {
-  "dataSignalName": "seattle-weather",
+  "dataSignalName": "seattle_weather",
   "options": {}
 }
 ```
@@ -178,7 +178,7 @@ The colors distinguish between different weather conditions such as sun, fog, dr
 ```json vega-lite
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": { "name": "seattle-weather" },
+  "data": { "name": "seattle_weather" },
   "mark": "bar",
   "encoding": {
     "x": {
@@ -209,7 +209,7 @@ And here is a heatmap:
 ```json vega-lite
 {
   "$schema": "https://vega.github.io/schema/vega-lite/v6.json",
-  "data": { "name": "seattle-weather" },
+  "data": { "name": "seattle_weather" },
   "title": "Daily Max Temperatures (C) in Seattle, WA",
   "config": {
     "view": {
