correct table schema

--- a/docs/assets/examples/seattle-weather/5.idoc.md
+++ b/docs/assets/examples/seattle-weather/5.idoc.md
@@ -32,8 +32,8 @@ Data table:
 
 ```json tabulator
 {
-    "dataSignalName": "seattle_weather",
-    "options": {}
+    "dataSourceName": "seattle_weather",
+    "variableId": "seattle_weather_selected"
 }
 ```
 
