--- a/docs/assets/examples/seattle-weather/7.idoc.md
+++ b/docs/assets/examples/seattle-weather/7.idoc.md
@@ -73,8 +73,8 @@ Data table:
 
 ```json tabulator
 {
-    "dataSignalName": "seattle_weather",
-    "options": {}
+    "dataSourceName": "seattle_weather",
+    "variableId": "seattle_weather_selected"
 }
 ```
 
