--- a/docs/assets/examples/seattle-weather/4.idoc.md
+++ b/docs/assets/examples/seattle-weather/4.idoc.md
@@ -26,8 +26,8 @@ Data table:
 
 ```json tabulator
 {
-    "dataSignalName": "seattle_weather",
-    "options": {}
+    "dataSourceName": "seattle_weather",
+    "variableId": "seattle_weather_selected"
 }
 ```
 
