--- a/docs/assets/examples/seattle-weather/8.idoc.md
+++ b/docs/assets/examples/seattle-weather/8.idoc.md
@@ -99,8 +99,8 @@ Data table:
 
 ```json tabulator
 {
-    "dataSignalName": "seattle_weather",
-    "options": {}
+    "dataSourceName": "seattle_weather",
+    "variableId": "seattle_weather_selected"
 }
 ```
 
