--- a/docs/assets/examples/seattle-weather/9.idoc.md
+++ b/docs/assets/examples/seattle-weather/9.idoc.md
@@ -166,8 +166,8 @@ Data table:
 
 ```json tabulator
 {
-  "dataSignalName": "seattle_weather",
-  "options": {}
+  "dataSourceName": "seattle_weather",
+  "variableId": "seattle_weather_selected"
 }
 ```
 
