--- a/docs/assets/examples/markdown/features/5.styling.idoc.md
+++ b/docs/assets/examples/markdown/features/5.styling.idoc.md
@@ -1,5 +1,9 @@
 ```css
-.group { padding: 20px; background-color: #f8f9fa; border: 2px solid #3498db; border-radius: 8px; margin-bottom: 20px; } .group h2 { color: #3498db; } .group h3 { color: #2c3e50; } #demo { background-color: #e8f5e8; border-color: #28a745; } #demo h2 { color: #28a745; }
+.group { padding: 20px; background-color: #f8f9fa; border: 2px solid #3498db; border-radius: 8px; margin-bottom: 20px; }
+.group h2 { color: #3498db; }
+.group h3 { color: #2c3e50; }
+#demo { background-color: #e8f5e8; border-color: #28a745; }
+#demo h2 { color: #28a745; }
 ```
 
 ```json google-fonts
