use json for tabulator

--- a/docs/assets/examples/markdown/features/2.data-sources.idoc.md
+++ b/docs/assets/examples/markdown/features/2.data-sources.idoc.md
@@ -176,13 +176,16 @@
 Load data from a static JSON array.
 
 
-```yaml tabulator
-dataSourceName: jsonData
-tabulatorOptions:
-  autoColumns: true
-  layout: fitColumns
-  maxHeight: 100px
-variableId: jsonTable
+```json tabulator
+{
+  "dataSourceName": "jsonData",
+  "tabulatorOptions": {
+    "autoColumns": true,
+    "layout": "fitColumns",
+    "maxHeight": "100px"
+  },
+  "variableId": "jsonTable"
+}
 ```
 
 
@@ -190,8 +193,10 @@ variableId: jsonTable
 Load CSV data from a fixed URL.
 
 
-```yaml tabulator
-dataSourceName: csvData
+```json tabulator
+{
+  "dataSourceName": "csvData"
+}
 ```
 
 
@@ -209,13 +214,16 @@ options:
 ```
 
 
-```yaml tabulator
-dataSourceName: jsonUrlVariable
-tabulatorOptions:
-  autoColumns: true
-  layout: fitColumns
-  maxHeight: 200px
-variableId: jsonUrlTable
+```json tabulator
+{
+  "dataSourceName": "jsonUrlVariable",
+  "tabulatorOptions": {
+    "autoColumns": true,
+    "layout": "fitColumns",
+    "maxHeight": "200px"
+  },
+  "variableId": "jsonUrlTable"
+}
 ```
 
 
@@ -223,6 +231,8 @@ variableId: jsonUrlTable
 You can provide CSV data directly as a single string.
 
 
-```yaml tabulator
-dataSourceName: inlineCsvData
+```json tabulator
+{
+  "dataSourceName": "inlineCsvData"
+}
 ```
