--- a/docs/assets/examples/markdown/features/4.table.idoc.md
+++ b/docs/assets/examples/markdown/features/4.table.idoc.md
@@ -44,26 +44,32 @@ Use tables for displaying and interacting with tabular data.
 ### Basic Table
 
 
-```yaml tabulator
-dataSourceName: sampleData
+```json tabulator
+{
+  "dataSourceName": "sampleData"
+}
 ```
 
 
 ### Selectable Table
 
 
-```yaml tabulator
-dataSourceName: sampleData
-tabulatorOptions:
-  autoColumns: true
-  layout: fitColumns
-  maxHeight: 200px
-  selectableRows: true
-  rowHeader:
-    formatter: rowSelection
-    titleFormatter: rowSelection
-    headerSort: false
-    headerHozAlign: center
-    hozAlign: center
-    width: 40
+```json tabulator
+{
+  "dataSourceName": "sampleData",
+  "tabulatorOptions": {
+    "autoColumns": true,
+    "layout": "fitColumns",
+    "maxHeight": "200px",
+    "selectableRows": true,
+    "rowHeader": {
+      "formatter": "rowSelection",
+      "titleFormatter": "rowSelection",
+      "headerSort": false,
+      "headerHozAlign": "center",
+      "hozAlign": "center",
+      "width": 40
+    }
+  }
+}
 ```
