--- a/docs/assets/examples/markdown/features/6.data-transformations.idoc.md
+++ b/docs/assets/examples/markdown/features/6.data-transformations.idoc.md
@@ -106,14 +106,18 @@ step: 10
 ### Filtered Products (in stock, price ≤ ${{maxPrice}})
 
 
-```yaml tabulator
-dataSourceName: rawData
+```json tabulator
+{
+  "dataSourceName": "rawData"
+}
 ```
 
 
 ### Category Statistics
 
 
-```yaml tabulator
-dataSourceName: categoryStats
+```json tabulator
+{
+  "dataSourceName": "categoryStats"
+}
 ```
