--- a/docs/assets/examples/markdown/features/9.mermaid.idoc.md
+++ b/docs/assets/examples/markdown/features/9.mermaid.idoc.md
@@ -140,37 +140,55 @@ flowchart TD
 Template-based diagram generation:
 
 
-```yaml tabulator
-dataSourceName: jsonData
-tabulatorOptions:
-  columns:
-    - title: LineTemplate
-      field: lineTemplate
-      editor: list
-      editorParams:
-        values:
-          - node
-          - edge
-          - labeledEdge
-    - title: ID
-      field: id
-      editor: input
-    - title: Label
-      field: label
-      editor: input
-    - title: From
-      field: from
-      editor: input
-    - title: To
-      field: to
-      editor: input
-    - title: Text
-      field: text
-      editor: input
-  layout: fitColumns
-  maxHeight: 150px
-editable: true
-variableId: jsonTable
+```json tabulator
+{
+  "dataSourceName": "jsonData",
+  "tabulatorOptions": {
+    "columns": [
+      {
+        "title": "LineTemplate",
+        "field": "lineTemplate",
+        "editor": "list",
+        "editorParams": {
+          "values": [
+            "node",
+            "edge",
+            "labeledEdge"
+          ]
+        }
+      },
+      {
+        "title": "ID",
+        "field": "id",
+        "editor": "input"
+      },
+      {
+        "title": "Label",
+        "field": "label",
+        "editor": "input"
+      },
+      {
+        "title": "From",
+        "field": "from",
+        "editor": "input"
+      },
+      {
+        "title": "To",
+        "field": "to",
+        "editor": "input"
+      },
+      {
+        "title": "Text",
+        "field": "text",
+        "editor": "input"
+      }
+    ],
+    "layout": "fitColumns",
+    "maxHeight": "150px"
+  },
+  "editable": true,
+  "variableId": "jsonTable"
+}
 ```
 
 
@@ -195,39 +213,57 @@ variableId: flowchartOutput
 Network diagram with servers and connections:
 
 
-```yaml tabulator
-dataSourceName: networkData
-tabulatorOptions:
-  columns:
-    - title: LineTemplate
-      field: lineTemplate
-      editor: list
-      editorParams:
-        values:
-          - server
-          - connection
-          - secureConnection
-          - subgraph
-          - end
-    - title: ID
-      field: id
-      editor: input
-    - title: Name
-      field: name
-      editor: input
-    - title: IP
-      field: ip
-      editor: input
-    - title: From
-      field: from
-      editor: input
-    - title: To
-      field: to
-      editor: input
-  layout: fitColumns
-  maxHeight: 200px
-editable: true
-variableId: networkTable
+```json tabulator
+{
+  "dataSourceName": "networkData",
+  "tabulatorOptions": {
+    "columns": [
+      {
+        "title": "LineTemplate",
+        "field": "lineTemplate",
+        "editor": "list",
+        "editorParams": {
+          "values": [
+            "server",
+            "connection",
+            "secureConnection",
+            "subgraph",
+            "end"
+          ]
+        }
+      },
+      {
+        "title": "ID",
+        "field": "id",
+        "editor": "input"
+      },
+      {
+        "title": "Name",
+        "field": "name",
+        "editor": "input"
+      },
+      {
+        "title": "IP",
+        "field": "ip",
+        "editor": "input"
+      },
+      {
+        "title": "From",
+        "field": "from",
+        "editor": "input"
+      },
+      {
+        "title": "To",
+        "field": "to",
+        "editor": "input"
+      }
+    ],
+    "layout": "fitColumns",
+    "maxHeight": "200px"
+  },
+  "editable": true,
+  "variableId": "networkTable"
+}
 ```
 
 
