--- a/docs/assets/examples/markdown/seattle-weather/4.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/4.idoc.md
@@ -26,8 +26,10 @@
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
