--- a/docs/assets/examples/markdown/seattle-weather/5.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/5.idoc.md
@@ -32,8 +32,10 @@
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
