--- a/docs/assets/examples/markdown/seattle-weather/6.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/6.idoc.md
@@ -44,8 +44,10 @@ label: 'Include Sun:'
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
