--- a/docs/assets/examples/markdown/seattle-weather/7.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/7.idoc.md
@@ -104,8 +104,10 @@ label: 'Include Snow:'
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
