--- a/docs/assets/examples/markdown/seattle-weather/8.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/8.idoc.md
@@ -136,8 +136,10 @@ step: 1
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
