--- a/docs/assets/examples/markdown/seattle-weather/9.idoc.md
+++ b/docs/assets/examples/markdown/seattle-weather/9.idoc.md
@@ -188,8 +188,10 @@ Presets allow you to go pre-chosen values:
 Data table:
 
 
-```yaml tabulator
-dataSourceName: seattle_weather
+```json tabulator
+{
+  "dataSourceName": "seattle_weather"
+}
 ```
 
 
