--- a/docs/assets/examples/markdown/features/7.dropdown.idoc.md
+++ b/docs/assets/examples/markdown/features/7.dropdown.idoc.md
@@ -73,6 +73,8 @@ Selected: **{{selectedProduct}}**
 ### Product Data
 
 
-```yaml tabulator
-dataSourceName: productData
+```json tabulator
+{
+  "dataSourceName": "productData"
+}
 ```
