--- a/docs/assets/examples/markdown/features/1.primer.idoc.md
+++ b/docs/assets/examples/markdown/features/1.primer.idoc.md
@@ -55,6 +55,7 @@
 
 # Chartifact Primer
 Explore the features below and **view source** to see how markdown elements are used throughout this page.
+
 ---
 ### Markdown
 Chartifact supports markdown for formatting text, headings, lists, and more. HTML tags are not allowed.
@@ -63,7 +64,7 @@ Chartifact supports markdown for formatting text, headings, lists, and more. HTM
 2. Another item
 - Bullet point
 - Another bullet
-Variables can also be used inside image URLs (`![alt text]({{variableName}})`) and hyperlink URLs (`[link text]({{variableName}})`).
+
 ---
 ### Variables
 Variables store values you can reference in markdown using `{{variableName}}`. They can be strings, numbers, booleans, arrays, objects, or calculated values.
@@ -73,11 +74,25 @@ Variables store values you can reference in markdown using `{{variableName}}`. T
 - **Array:** Selected items: **{{selectedItems}}**.
 - **Object:** Foo is **{{obj_foo}}**, value is **{{obj_value}}**.
 - **String:** Favorite color: **{{selectedColor}}**.
+
 ---
 ### Calculated Variables
 Calculated variables derive their value from other variables using [Vega's expression language](https://vega.github.io/vega/docs/expressions/).
 - **Doubled temperature:** **{{doubled_temperature}}** (calculated from `temperature`)
 Note: Some variable names are reserved and cannot be used (e.g. `datum`, `event`, etc.).
+
+---
+### Plugins
+Plugins are what make Chartifacts interactive.
+#### In JSON format
+ Add plugins as objects to the elements array.
+#### In Markdown format
+ Define plugins using **triple backticks** with the syntax ` ```[format] [plugin-type] ` where format can be `json` or `yaml`.
+- **Use YAML mostly** for cleaner, readable configuration
+- **Use JSON** when copying from libraries like Vega or Tabulator
+
+View the source of this document to see plugin syntax examples for all the controls below.
+
 ---
 ### Input Controls
 Input controls let users change variable values interactively. Changes are instantly reflected in markdown and calculations above.
